# paper_digest

./: .gitignore  LAUNCHD_SETUP.md  README.md  convert.py  fetch_papers_arxiv.py  pyproject.toml  run_digest.sh
digest/: convert.py  fetch.py  format.py  run.py  score.py
vault_chat/: chat.py
